# makeRSSfromConnpass

./: .gitignore  aichi.xml  aomori.xml  explore.py  fukui.xml  fukuoka.xml  fukushima.xml  gunma.xml  hiroshima.xml  hokkaido.xml  ibaraki.xml  ishikawa.xml  kagawa.xml  kanagawa.xml  kumamoto.xml  kyoto.xml  makeRSS_Connpass.py  makeRSS_Connpass.xml  miyagi.xml  nagasaki.xml  niigata.xml  okayama.xml  online.xml  osaka.xml  pyproject.toml  readme.md  saga.xml  saitama.xml  search.py  shiga.xml  shizuoka.xml  tochigi.xml  tokushima.xml  tokyo.xml  wakayama.xml  yamagata.xml  yamaguchi.xml
.github/workflow/: main.yml
.github/workflows/: main.yml
outputs/: akita.xml  chiba.xml  ehime.xml  fukuoka.xml  fukushima.xml  gifu.xml  hokkaido.xml  hyogo.xml  index.html  iwate.xml  kagoshima.xml  kanagawa.xml  kochi.xml  mie.xml  miyazaki.xml  nagano.xml  nara.xml  oita.xml  okinawa.xml  online.xml  shimane.xml  tokyo.xml  tottori.xml  toyama.xml  yamagata.xml  yamanashi.xml
outputs/event_count/: event_count.csv
src/: connpass_api.py  daily_event_count.py  explore.py  makerss.py  search.py
